# memory-tool

./: .gitignore  Cargo.toml  memory.sqlite-shm  memory.sqlite-wal
modelfiles/: memory-agent.Modelfile
src/: api.rs  chat.rs  chunking.rs  cli.rs  indexer.rs  lib.rs  main.rs  model.rs  search.rs  storage.rs
src/chat/: agent.rs  event.rs  stream.rs  tools.rs  usage.rs  wire.rs
src/cli/: context.rs  index.rs  search.rs  serve.rs
src/store/: paths.rs
src/tui/: app.rs  run.rs
